--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | QR code component</title>
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   
 </head>
 <body>
   <div class="main">
     <div class="qr">
-      <img src="/images/image-qr-code.png" alt="QR Code" srcset="">
+      <img src="./images/image-qr-code.png" alt="QR Code" srcset="">
     </div>
     <div class="all-text">
       <h1>Improve your front-end </br> skills by building projects</h1>
